# otus-cpp-lesson-2-ip

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
include/: filter.h  ip_v4.h  parser.h  utils.h
src/: main.cpp
test/: ip_filter_test.cpp
